--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,31 +1,43 @@
-name: Build and push Docker image
+name: Build and push Podman image
 
 on:
   release:
     types: [published]
 
+env:
+  REGISTRY_USER: ${{ github.actor }}
+  REGISTRY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+  IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-      id-token: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      
       - name: Login to GHCR
-        uses: docker/login-action@v3
+        uses: redhat-actions/podman-login@v1
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v6
+          username: ${{ env.REGISTRY_USER }}
+          password: ${{ env.REGISTRY_PASSWORD }}
+          registry: ${{ env.IMAGE_REGISTRY }}
+    
+      - name: Build image
+        id: build_image
+        uses: redhat-actions/buildah-build@v2
         with:
+          archs: amd64,arm64
           context: .
-          file: ./Containerfile
-          push: true
-          tags: |
-            ghcr.io/tokenicrat/cfwarp:${{ github.ref_name }}
-            ghcr.io/tokenicrat/cfwarp:latest
+          containerfiles: ./Containerfile
+          image: ${{ env.IMAGE_REGISTRY }}/cfwarp
+          tags: latest,${{ github.event.release.tag_name }}
+      
+      - name: Push to GHCR
+        uses: redhat-actions/push-to-registry@v2
+        with:
+          image: ${{ steps.build_image.outputs.image }}
+          tags: ${{ steps.build_image.outputs.tags }}
+          registry: ${{ env.IMAGE_REGISTRY }}
+          username: ${{ env.REGISTRY_USER }}
+          password: ${{ env.REGISTRY_PASSWORD }}
