--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Push to GHCR
         uses: redhat-actions/push-to-registry@v2
         with:
-          image: ${{ steps.build_image.outputs.image }}
+          image: cfwarp
           tags: ${{ steps.build_image.outputs.tags }}
           registry: ${{ env.IMAGE_REGISTRY }}
           username: ${{ env.REGISTRY_USER }}
